--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 MONGO_URI=mongodb+srv://root:root@cluster0.byfgk0n.mongodb.net/?retryWrites=true&w=majority
-JWT_SECRET= palabraSECRETA
+JWT_SECRET= lAgYPSo8jENme9apOnQx
 URL_FRONTEND= http://localhost:5173
